--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -93,16 +93,12 @@
                 </tr>
                 <tr>
                     <td><b>Previous Band</b></td>
-                    <td>{{ room.band }}</td>
+                    <td>{{ room.band }} (£{{ room.band.weekly_price_old }})</td>
                 </tr>
                 <tr>
                     <td><b>Proposed New Band</b></td>
-                    <td>{{ room.new_band }}<br>
+                    <td>{{ room.new_band }} (£{{ room.new_band.weekly_price }})<br>
                     <a href="/roomballot/room-pricing/{{ room.room_id }}" class="btn btn-primary mt-2">Why? <i class="fas fa-angle-right ml-2"></i></a></td></td>
-                </tr>
-                <tr>
-                    <td><b>Proposed New Price</b></td>
-                    <td>£{{ room.new_band.weekly_price }}<div class="mt-2"></div>
                 </tr>
                 </tbody>
             </table>
