--- a/rooms/roomballot/templates/roomballot/staircase-list.html
+++ b/rooms/roomballot/templates/roomballot/staircase-list.html
@@ -51,11 +51,9 @@
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="d-md-block">
             <div class="list-group">
-                <p class="list-group-item"><b>Questions?</b></p>
-                <p class="list-group-item">
-                    If you're unsure about the ballot process, please consult the Knowledge Base.
-                </p>
-                <a class="list-group-item" href="/roomballot/info">Knowledge Base</a>
+                <p class="list-group-item active"><b>IMPORTANT</b><br>We have been successful in increasing the number of
+                bands for the next academic year, so rooms are now banded in the range 1*-9.</p>
+                <a class="list-group-item" href="/roomballot/info/pricing">Band Prices<i class="fas fa-angle-right ml-2"></i></a>
             </div>
         </div>
     </div>
