Removed 'proposed' from pricing wording

--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -135,7 +135,7 @@
                     <td>{{ room.new_band }}</td>
                 </tr>
                 <tr class="table-active">
-                    <td><b>Proposed Weekly Price<br>(Current Rates)</b></td>
+                    <td><b>Weekly Price<br>(Current Rates)</b></td>
                     <td></td>
                     <td><b>£{{ room.new_band.weekly_price|stringformat:'0.2f' }}</b></td>
                 </tr>
@@ -155,7 +155,7 @@
                     <td>{{ room.band }}</td>
                 </tr>
                 <tr>
-                    <td><b>Proposed New Band</b></td>
+                    <td><b>New Band</b></td>
                     <td>{{ room.new_band }}</td>
                 </tr>
                 <tr>
