--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -95,7 +95,7 @@
                     <td>{{ room.band }} (£{{ room.band.weekly_price_old }})</td>
                 </tr>
                 <tr>
-                    <td><b>Proposed New Band</b></td>
+                    <td><b>New Band</b></td>
                     <td>{{ room.new_band }} (£{{ room.new_band.weekly_price }})<br>
                     <a href="/roomballot/room-pricing/{{ room.room_id }}" class="btn btn-primary mt-2">Why? <i class="fas fa-angle-right ml-2"></i></a></td></td>
                 </tr>
