--- a/rooms/roomballot/templates/roomballot/dashboard-admin.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-admin.html
@@ -50,7 +50,7 @@
                     {% for r in rooms %}
                         {
                             value: "{{ r.room_id }}",
-                            label: "{{ r }}"
+                            label: "{{ r }} ({{ r.identifier }})"
                         }
                         {% if not forloop.last %},{% endif %}
                     {% endfor %}
