--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -56,7 +56,7 @@
                     {% for r in rooms %}
                         {
                             value: "{{ r.room_id }}",
-                            label: "{{ r }}"
+                            label: "{{ r }} ({{ r.identifier }})"
                         }
                         {% if not forloop.last %},{% endif %}
                     {% endfor %}
