Changes now increase is finalised

--- a/rooms/roomballot/templates/roomballot/info-bursary.html
+++ b/rooms/roomballot/templates/roomballot/info-bursary.html
@@ -49,7 +49,10 @@
                             Scholarship Scheme). This means that, for College to have your information, you must allow
                             the Student Loan Company to pass on your household financial information to the University.
                             If you think you fall into this category, make sure to do this next year when you apply for
-                            your student finance.
+                            your student finance.<br><br>
+                            <b>NEW</b> - we have introduced a new fixed rebate of £300, which is payable if your household
+                            income falls into the bracket above and you pick a room in Band 4 or below. More information
+                            about this new bursary is available <a href="https://www.jcr.dow.cam.ac.uk/storage/app/media/pdf/2019/bursary/Bursary.pdf">here</a>.
                         </p>
                         <h4>Hardship Grant</h4>
                         <p>
