--- a/rooms/roomballot/templates/roomballot/info-pricing.html
+++ b/rooms/roomballot/templates/roomballot/info-pricing.html
@@ -37,8 +37,8 @@
                             This policy was conceived and implemented by <b>Cam O'Connor</b>, JCR President
                             2019-20,
                             and <b>Barney Walker</b>, JCR Vice-President 2019-20.<br><br>
-                            <b>NOTE: We have been successful in increasing the number of rent bands from 7 to 13. Based
-                            on this year's prices (i.e. without any upcoming increase), these are the new band prices:</b>
+                            <b>NOTE: We have been successful in increasing the number of rent bands from 7 to 13. Inclusive
+                                of the 2.98% increase for the year 2019/20, these are the new band prices:</b>
                         </p>
 
                         <table class="table table-striped">
