--- a/rooms/roomballot/templates/roomballot/emails/room-selected.html
+++ b/rooms/roomballot/templates/roomballot/emails/room-selected.html
@@ -3,8 +3,8 @@
 {% block content %}
 Hi {{ student.first_name }},<br><br>
 
-You wizard, you warlock! You've selected your new room, <b>{{ room }}</b>. If you need to make any changes, simply drop the Internet Officer
-    a message through livechat, or an email at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.<br><br>
+You wizard, you warlock! You've selected your new room, <b>{{ room }}</b>. If you need to make any changes, simply drop a member of the JCR
+    Committee a message through livechat, or an email at <a href="mailto:president@jcr.dow.cam.ac.uk">president@jcr.dow.cam.ac.uk</a>.<br><br>
 
     Downing JCR &#10084;
 {% endblock %}
