--- a/rooms/roomballot/templates/roomballot/room-select-confirm.html
+++ b/rooms/roomballot/templates/roomballot/room-select-confirm.html
@@ -55,7 +55,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
             <div align="right">
-                <button class="btn btn-primary mb-5" id="confirm">Confirm</button>
+                <button class="btn btn-primary mb-5" id="confirm">Confirm <i class="fas fa-angle-right ml-2"></i></button>
             </div>
         </div>
     </div>
