Changed formatting on 'select' page

--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -28,12 +28,13 @@
                 {% else %}
                     {% if can_pick %}
                         <p>It's time to pick your room.</p>
+                        <a href="staircases" class="btn btn-primary">Pick Room <i class="fas fa-angle-right ml-2"></i></a>
                     {% else %}
                         <p>You can't pick your room right now. If you've missed your slot, get in touch by livechat
                         or come to the ballot room.</p>
+                        <a href="staircases" class="btn btn-primary">Browse Rooms <i class="fas fa-angle-right ml-2"></i></a>
                     {% endif %}
                 {% endif %}
-                <a href="staircases" class="btn btn-primary">Browse Rooms <i class="fas fa-angle-right ml-2"></i></a>
             </div>
         </div>
 
