--- a/rooms/roomballot/templates/roomballot/room-select-confirm.html
+++ b/rooms/roomballot/templates/roomballot/room-select-confirm.html
@@ -20,7 +20,18 @@
             else location.assign('../../error/' + responseCode.toString());
         }
 
-        $('#confirm').click(function() {
+        $('#confirm1').click(function() {
+            $.ajax({
+                url: '/roomballot/room/{{ room.room_id }}/confirm-selection',
+                type: 'POST',
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                success: function (response) {
+                    HandleResponse(response.responseCode);
+                }
+            });
+        });
+
+        $('#confirm2').click(function() {
             $.ajax({
                 url: '/roomballot/room/{{ room.room_id }}/confirm-selection',
                 type: 'POST',
@@ -46,17 +57,23 @@
 
     <div class="row mt-3">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p>You're sure you want to select <b>{{ room }}</b>? This action can't be undone.</p>
+            <p>You're sure you want to select <b>{{ room }}</b>?</p>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 d-none d-md-block">
             <div align="left">
-                <a class="btn btn-primary mb-5" href="../{{ room.room_id }}">Cancel</a>
+                <a class="btn btn-primary mb-5" href="../{{ room.room_id }}" style="min-width: 40%">Cancel</a>
             </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 d-none d-md-block">
             <div align="right">
-                <button class="btn btn-primary mb-5" id="confirm">Confirm <i class="fas fa-angle-right ml-2"></i></button>
+                <button class="btn btn-success mb-5" style="min-width: 40%" id="confirm1">Confirm <i class="fas fa-angle-right ml-2"></i></button>
             </div>
+        </div>
+        <div class="col-md-12 d-md-none mt-2 mb-4" align="center">
+            <a class="btn btn-primary" href="../{{ room.room_id }}" style="width: 80%; height: 50px; line-height: 35px">Cancel</a>
+        </div>
+        <div class="col-md-12 d-md-none" align="center">
+            <button class="btn btn-success mb-5" id="confirm2" style="width: 80%; height: 50px;">Confirm <i class="fas fa-angle-right ml-2"></i></button>
         </div>
     </div>
 </div>
