Updated email template text

--- a/rooms/roomballot/templates/roomballot/emails/review-room.html
+++ b/rooms/roomballot/templates/roomballot/emails/review-room.html
@@ -1,12 +1,11 @@
 {% extends 'roomballot/emails/template.html' %}
 
 {% block content %}
-Hi {{ student.first_name }},<br><br>
+Hey {{ student.first_name }},<br><br>
 
-How's it going? I hope first term is treating you well!<br><br>
+I hope you had a good vacation!<br><br>
 
-I'd like to invite you to review your room on the Room Balloting System by visiting the link below. Information you
-    give in your review will also help us price rooms more fairly.<br><br>
+I'd like to invite you to review your room on the Room Balloting System by visiting the link below.<br><br>
 
 <a href="https://ballot.downingjcr.co.uk">Review my Room!</a><br><br>
 
@@ -15,6 +14,6 @@ If the information on the system is incorrect, for example because you have chan
 
 Downing love,<br><br>
 
-Internet Officer<br>
-<a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>
+Cam<br>
+<a href="mailto:president@jcr.dow.cam.ac.uk">president@jcr.dow.cam.ac.uk</a>
 {% endblock %}
