Added ability to hide bands

--- a/rooms/roomballot/templates/roomballot/emails/invite-ballot.html
+++ b/rooms/roomballot/templates/roomballot/emails/invite-ballot.html
@@ -5,7 +5,7 @@
 
     I hope you had a great vacation! As you may know, the room ballot will be taking place this term. For more
     information about the ballot, including an explanation of all the jargon, and how to get a room outside of the
-    ballot, please visit the Knowledge Base on the new room ballot system:<br><br>
+    ballot, please visit the Knowledge Base on the room ballot system:<br><br>
 
     <a href="https://ballot.downingjcr.co.uk">https://ballot.downingjcr.co.uk</a><br><br>
 
