--- a/rooms/roomballot/templates/roomballot/emails/review-room.html
+++ b/rooms/roomballot/templates/roomballot/emails/review-room.html
@@ -14,6 +14,6 @@ If the information on the system is incorrect, for example because you have chan
 
 Downing love,<br><br>
 
-Cam<br>
+JCR President<br>
 <a href="mailto:president@jcr.dow.cam.ac.uk">president@jcr.dow.cam.ac.uk</a>
 {% endblock %}
