--- a/rooms/roomballot/templates/roomballot/emails/syndicate-complete.html
+++ b/rooms/roomballot/templates/roomballot/emails/syndicate-complete.html
@@ -3,8 +3,8 @@
 {% block content %}
 Hi {{ student.first_name }},<br><br>
 
-Congrats! Your syndicate is now complete. If you need to make any changes, simply drop the Internet Officer
-    a message through livechat, or an email at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.<br><br>
+Congrats! Your syndicate is now complete. If you need to make any changes, simply drop a memebr of the JCR Committee
+    a message through livechat, or an email at <a href="mailto:president@jcr.dow.cam.ac.uk">president@jcr.dow.cam.ac.uk</a>.<br><br>
 
     Downing JCR &#10084;
 {% endblock %}
