--- a/rooms/roomballot/templates/roomballot/create-review.html
+++ b/rooms/roomballot/templates/roomballot/create-review.html
@@ -35,7 +35,7 @@
             <form class="mb-5 mt-5" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="title">Review Title</label>
+                    <label for="title">Summary</label>
                     <input type="text" class="form-control" id="title" name="title" required>
                 </div>
                 <div class="form-group">
