Room sizes as integers; import changes

--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -65,7 +65,7 @@
                 </tr>
                 <tr>
                     <td><b>Size</b></td>
-                    <td>{{ room.size }} m&#178;</td>
+                    <td>{{ room.size|floatformat:"0" }} m&#178;</td>
                 </tr>
                 <tr>
                     <td><b>Floor</b></td>
