--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -39,7 +39,7 @@
                 <tbody>
                 <tr>
                     <td><b>Size</b></td>
-                    <td>{{ room.size }} m&#178;</td>
+                    <td>{{ room.size|floatformat:"0" }} m&#178;</td>
                     <td>{{ room.score_size|stringformat:'0.2f' }}</td>
                 </tr>
                 {% if room.is_ensuite %}
