Fixed contract length bug, pricing formatting

--- a/rooms/roomballot/templates/roomballot/info-pricing.html
+++ b/rooms/roomballot/templates/roomballot/info-pricing.html
@@ -39,7 +39,7 @@
                         <table class="table table-striped">
                             <tr>
                                 <th>Band</th>
-                                <th>Price (last year's rates)</th>
+                                <th>Price</th>
                             </tr>
                             {% for b in bands %}
                             <tr>
