--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -125,7 +125,7 @@
                     <td>£{{ room.feature_price|stringformat:'0.2f' }}</td>
                 </tr>
                 <tr>
-                    <td><b>TOTAL</b><br>(Exclusive of 2.98% Increase)</td>
+                    <td><b>TOTAL</b></td>
                     <td></td>
                     <td><b>£{{ room.new_price|stringformat:'0.2f' }}</b></td>
                 </tr>
@@ -135,7 +135,7 @@
                     <td>{{ room.new_band }}</td>
                 </tr>
                 <tr class="table-active">
-                    <td><b>Weekly Price<br>(Inclusive of 2.98% Increase)</b></td>
+                    <td><b>Weekly Price</b></td>
                     <td></td>
                     <td><b>£{{ room.new_band.weekly_price|stringformat:'0.2f' }}</b></td>
                 </tr>
