--- a/rooms/roomballot/templates/roomballot/room-detail-pricing.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-pricing.html
@@ -75,17 +75,17 @@
                     <td>{{ room.score_renovated_facilities|stringformat:'0.2f' }}</td>
                 </tr>
                 <tr>
-                    <td><b>Facing Lensfield Road?</b></td>
+                    <td><b>Facing Lensfield Road</b></td>
                     <td>{% if room.faces_lensfield %}Yes{% else %}No{% endif %}</td>
                     <td>{{ room.score_facing_lensfield|stringformat:'0.2f' }}</td>
                 </tr>
                 <tr>
-                    <td><b>Facing Court?</b></td>
+                    <td><b>Facing Court</b></td>
                     <td>{% if room.faces_court %}Yes{% else %}No{% endif %}</td>
                     <td>{{ room.score_facing_court|stringformat:'0.2f' }}</td>
                 </tr>
                 <tr>
-                    <td><b>Ground Floor?</b></td>
+                    <td><b>Ground Floor</b></td>
                     <td>{% if room.floor == 1 %}Yes{% else %}No{% endif %}</td>
                     <td>{{ room.score_ground_floor|stringformat:'0.2f' }}</td>
                 </tr>
