Changed misleading email text

--- a/rooms/roomballot/templates/roomballot/emails/selection-invite.html
+++ b/rooms/roomballot/templates/roomballot/emails/selection-invite.html
@@ -4,7 +4,7 @@
 Hi {{ student.first_name }},<br><br>
 
 It's that time! You can now select your room. Click <a href="https://ballot.downingjcr.co.uk">here</a> to visit the
-    Room Balloting System. Better be quick, you've only got 5 minutes!<br><br>
+    Room Balloting System. Better be quick!<br><br>
 
     Downing JCR &#10084;
 {% endblock %}
