--- a/rooms/roomballot/templates/roomballot/base-student-jquery.html
+++ b/rooms/roomballot/templates/roomballot/base-student-jquery.html
@@ -115,6 +115,15 @@
 
 </nav>
 
+<div class="container">
+	<div class="alert alert-warning">
+		You are viewing the <strong>old</strong> ballot website. This will allow you to browse the list
+		of available rooms, but if you would like to create/view your syndicate or fill out the preferences
+		survey, you should use the <strong>new</strong> website available
+		<a href="https://ballot.downingjcr.co.uk">here</a>.
+	</div>
+</div>
+
 {% block content %}
 {% endblock %}
 
